--- a/Website/app/templates/app/index.html
+++ b/Website/app/templates/app/index.html
@@ -3,17 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pet Health Care System</title>
+    <title style="color: aqua;">Pet Health Care System</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   </head>
   <body>
     <header>
-      <h1>Pet Health Care System</h1>
+      <div style="background-image: url('{% static 'images/pet.png' %}');
+                  background-size: cover; 
+                  background-position: center;
+                  width: 100%; 
+                  height: 100%; 
+                  display: grid; 
+                  place-items: center;">
+        <h1 style="color: aqua;">Pet Health Care System</h1>
+      </div>
     </header>
 
     <nav class="navbar">
-      <span class="welcome-message">Chào mừng, {{ user.username }}!</span>
+      <span class="welcome-message {% if not user.is_authenticated %}invisible{% endif %}">Chào mừng, {{ user.username }}!</span>
+
       <div class="nav-links">
         <a href="{% url 'register' %}">Đăng ký khám bệnh</a>
         <a href="#">Đưa thú cưng đi khám</a>
@@ -28,12 +37,24 @@
       {% block login %}
 
       {% endblock %}
-      {% block home %}
+      {% block home_customer %}
 
       {% endblock %}
+      {% block petInf_customer %}
+
+      {% endblock %}
+      {% block profile_customer %}
+
+      {% endblock %}
+      {% block appointment_registration %}
+
+      {% endblock %}
+
+      {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}" class="logout-link">Đăng xuất</a>
+      {% endif %}
     </body>
 
-    <a href="{% url 'logout' %}" class="logout-link">Đăng xuất</a>
     <footer>&copy; 2025 Trung tâm chăm sóc thú y. Mọi quyền được bảo lưu.</footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
