--- a/Website/app/templates/app/login.html
+++ b/Website/app/templates/app/login.html
@@ -2,23 +2,25 @@
 {% load static %}
 
 {% block login %}
-  <section class="vh-100 bg-image" style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+  <section class="vh-100 bg-image" style="background-image: url('{% static 'images/background_register.jpg' %}');
+                                  background-size: cover; 
+                                  background-position: center;">
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
       <div class="container h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-            <div class="card" style="border-radius: 15px;">
+            <div class="card" style="border-radius: 15px; height: 80%;">
               <div class="card-body p-5">
-                <h2 class="text-uppercase text-center mb-5">Log in</h2>
+                <h2 class="text-uppercase text-center mb-5">Đăng Nhập</h2>
 
                 <form method="POST">
                   {% csrf_token %}
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="text" name="username" id="form3Example1cg" class="form-control form-control-lg" placeholder="Your name" />
+                    <input type="text" name="username" id="form3Example1cg" class="form-control form-control-lg" placeholder="Tên của bạn" />
                   </div>
 
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="password" name="password" id="form3Example4cg" class="form-control form-control-lg" placeholder="Password" />
+                    <input type="password" name="password" id="form3Example4cg" class="form-control form-control-lg" placeholder="Mật khẩu" />
                   </div>
 
                   <div class="d-flex justify-content-center">
@@ -27,8 +29,9 @@
                   {% for message in messages %}
                     {{ message }}
                   {% endfor %}
-                  <p class="text-center text-muted mt-5 mb-0">
-                    Do not have an account? <a href="{% url 'register' %}" class="fw-bold text-body"><u>Sign in here</u></a>
+                  <p class="text-center mt-5 mb-0">
+                    Bạn chưa có tài khoản?
+                    <a href="{% url 'register' %}" class="fw-bold"><u>Đăng ký tại đây</u></a>
                   </p>
                 </form>
               </div>
