--- a/Website/app/templates/app/register.html
+++ b/Website/app/templates/app/register.html
@@ -2,45 +2,48 @@
 {% load static %}
 
 {% block register %}
-  <section class="vh-100 bg-image" style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+  <section class="vh-90 bg-image" style="background-image: url('{% static 'images/background_register.jpg' %}');
+                                         background-size: cover; 
+                                         background-position: center;">
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
       <div class="container h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-            <div class="card" style="border-radius: 15px;">
+            <div class="card" style="border-radius: 15px; height: 80%;">
               <div class="card-body p-5">
-                <h2 class="text-uppercase text-center mb-5">Create an account</h2>
+                <h2 class="text-uppercase text-center mb-5">Đăng ký</h2>
 
                 <form method="POST" style="display: grid; place-content: center;">
                   {% csrf_token %}
                   <div data-mdb-input-init class="form-outline mb-4">
-                    <label class="form-label" for="form3Example1cg">Your Name</label>
+                    <label class="form-label" for="form3Example1cg">Tên của bạn</label>
                     {{ form.username }}
                   </div>
 
-                  <div data-mdb-input-init class="form-outline mb-4" style="margin-left:5px">
-                    <label class="form-label" for="form3Example3cg">Your Email</label>
+                  <div data-mdb-input-init class="form-outline mb-4" style="margin-left:47px">
+                    <label class="form-label" for="form3Example3cg">Email</label>
                     {{ form.email }}
                   </div>
 
-                  <div data-mdb-input-init class="form-outline mb-4" style="margin-left:14px">
-                    <label class="form-label" for="form3Example4cg">Password</label>
+                  <div data-mdb-input-init class="form-outline mb-4" style="margin-left:19px">
+                    <label class="form-label" for="form3Example4cg">Mật khẩu</label>
                     {{ form.password1 }}
                   </div>
 
                   <div data-mdb-input-init class="form-outline mb-4" style="margin-left:22px">
-                    <label class="form-label" for="form3Example4cdg">Confirm</label>
+                    <label class="form-label" for="form3Example4cdg">Xác nhận</label>
                     {{ form.password2 }}
                   </div>
                   {% for message in messages %}
-                    <p style="font-family: 'Courier New', Courier, monospace; text">{{ message }}</p>
+                    <p style="font-family: 'Courier New', Courier, monospace; text " style="color: black !important;">{{ message }}</p>
                   {% endfor %}
                   <div class="d-flex justify-content-center">
-                    <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
+                    <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-success btn-block btn-lg gradient-custom-4">Đăng ký</button>
                   </div>
 
-                  <p class="text-center text-muted mt-5 mb-0">
-                    Have already an account? <a href="{% url 'login' %}" class="fw-bold text-body"><u>Login here</u></a>
+                  <p class="text-center mt-5 mb-0" style="background-color: #f8f9fa; padding: 10px; border-radius: 5px;">
+                    Bạn đã có tài khoản?
+                    <a href="{% url 'login' %}" class="fw-bold"><u>Đăng nhập tại đây</u></a>
                   </p>
                 </form>
               </div>
