--- a/Website/app/static/css/style.css
+++ b/Website/app/static/css/style.css
@@ -1,9 +1,3 @@
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-} */
-
 html,
 body {
     height: 100%;
@@ -229,4 +223,11 @@ body.register-body {
 .login-links a:hover,
 .register-links a:hover {
     color: #005f8f;
+}
+
+.layout {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    height: 100vh;
 }
