--- a/Website/app/templates/app/index.html
+++ b/Website/app/templates/app/index.html
@@ -20,16 +20,7 @@
       </div>
     </header>
 
-    <nav class="navbar">
-      <span class="welcome-message {% if not user.is_authenticated %}invisible{% endif %}">Chào mừng, {{ user.username }}!</span>
-
-      <div class="nav-links">
-        <a href="{% url 'register' %}">Đăng ký khám bệnh</a>
-        <a href="#">Đưa thú cưng đi khám</a>
-        <a href="#">Đánh giá các lần khám</a>
-        <a href="#">Quản lý nhập viện</a>
-      </div>
-    </nav>
+    <nav class="navbar"></nav>
     <body>
       {% block register %}
 
@@ -37,22 +28,6 @@
       {% block login %}
 
       {% endblock %}
-      {% block home_customer %}
-
-      {% endblock %}
-      {% block petInf_customer %}
-
-      {% endblock %}
-      {% block profile_customer %}
-
-      {% endblock %}
-      {% block appointment_registration %}
-
-      {% endblock %}
-
-      {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}" class="logout-link">Đăng xuất</a>
-      {% endif %}
     </body>
 
     <footer>&copy; 2025 Trung tâm chăm sóc thú y. Mọi quyền được bảo lưu.</footer>
