--- a/Website/app/templates/app/register.html
+++ b/Website/app/templates/app/register.html
@@ -2,14 +2,28 @@
 {% load static %}
 
 {% block register %}
-  <section class="vh-90 bg-image" style="background-image: url('{% static 'images/background_register.jpg' %}');
-                                         background-size: cover; 
-                                         background-position: center;">
+  <style>
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow-x: hidden;
+    }
+  </style>
+
+  <section class="vh-100 bg-image" style="
+  background-image: url('{% static 'images/background_register.jpg' %}');
+  background-size: cover; 
+  background-position: center;
+  margin: 0;
+  padding: 0;">
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-      <div class="container h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="container-fluid h-100 p-0">
+        <div class="row d-flex justify-content-center align-items-center h-100 m-0">
           <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-            <div class="card" style="border-radius: 15px; height: 80%;">
+            <div class="card" style="border-radius: 15px; width: 87%; margin: auto; height: 90%;">
               <div class="card-body p-5">
                 <h2 class="text-uppercase text-center mb-5">Đăng ký</h2>
 
@@ -20,25 +34,27 @@
                     {{ form.username }}
                   </div>
 
-                  <div data-mdb-input-init class="form-outline mb-4" style="margin-left:47px">
-                    <label class="form-label" for="form3Example3cg">Email</label>
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <label class="form-label" for="form3Example3cg" style="margin-right: 48px;">Email</label>
                     {{ form.email }}
                   </div>
 
-                  <div data-mdb-input-init class="form-outline mb-4" style="margin-left:19px">
-                    <label class="form-label" for="form3Example4cg">Mật khẩu</label>
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <label class="form-label" for="form3Example4cg" style="margin-right: 20px;">Mật khẩu</label>
                     {{ form.password1 }}
                   </div>
 
-                  <div data-mdb-input-init class="form-outline mb-4" style="margin-left:22px">
-                    <label class="form-label" for="form3Example4cdg">Xác nhận</label>
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <label class="form-label" for="form3Example4cdg" style="margin-right: 22px;">Xác nhận</label>
                     {{ form.password2 }}
                   </div>
+
                   {% for message in messages %}
-                    <p style="font-family: 'Courier New', Courier, monospace; text " style="color: black !important;">{{ message }}</p>
+                    <p style="font-family: 'Courier New', Courier, monospace; color: black !important;">{{ message }}</p>
                   {% endfor %}
+
                   <div class="d-flex justify-content-center">
-                    <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-success btn-block btn-lg gradient-custom-4">Đăng ký</button>
+                    <button type="submit" class="btn btn-success btn-block btn-lg gradient-custom-4">Đăng ký</button>
                   </div>
 
                   <p class="text-center mt-5 mb-0" style="background-color: #f8f9fa; padding: 10px; border-radius: 5px;">
