--- a/Website/app/templates/customer/index.html
+++ b/Website/app/templates/customer/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title style="color: aqua;">Pet Health Care System</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
   </head>
   <body>
     <header>
@@ -22,18 +22,27 @@
 
     <nav class="navbar"></nav>
     <body>
-      {% block home_customer %}
+      <div style=" 
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height:100%;
+    background-image:url('{% static 'images/background_register.jpg' %}'); background-size: cover;">
+        {% block home_customer %}
 
-      {% endblock %}
-      {% block petInf_customer %}
+        {% endblock %}
+        {% block petInf_customer %}
 
-      {% endblock %}
-      {% block profile_customer %}
+        {% endblock %}
+        {% block profile_customer %}
 
-      {% endblock %}
-      {% block appointment_registration %}
+        {% endblock %}
+        {% block appointment_registration %}
 
-      {% endblock %}
+        {% endblock %}
+        {% block rating %}
+
+        {% endblock %}
+      </div>
 
       <a href="{% url 'logout' %}" class="logout-link">Đăng xuất</a>
     </body>
