--- a/Website/app/templates/customer/profile_customer.html
+++ b/Website/app/templates/customer/profile_customer.html
@@ -1,36 +1,64 @@
 {% extends 'customer/index.html' %}
 {% load static %}
 {% block profile_customer %}
-  <div class="profile-card">
-    <h2>Hồ sơ khách hàng</h2>
-    <div class="profile-info">
-      <p>
-        <strong>Tên khách hàng:</strong> {{ customer.name_customer }}
-      </p>
-      <p>
-        <strong>Số điện thoại:</strong>
-        {% if customer.phone_number_customer %}
-          {{ customer.phone_number_customer }}
-        {% else %}
-          <span class="text-muted">Không có thông tin</span>
-        {% endif %}
-      </p>
-      <p>
-        <strong>Địa chỉ:</strong>
-        {% if customer.address %}
-          {{ customer.address }}
-        {% else %}
-          <span class="text-muted">Không có thông tin</span>
-        {% endif %}
-      </p>
-      <p>
-        <strong>Email:</strong>
-        {% if customer.email_customer %}
-          {{ customer.email_customer }}
-        {% else %}
-          <span class="text-muted">Không có thông tin</span>
-        {% endif %}
-      </p>
+  <div style=" display:none ;display: grid; place-content: center; width: 100%; height: 100%; position:absolute; z-index: 1000;">
+    <div id="editModal" class="modal"></div>
+  </div>
+  <div style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100vh;">
+    <div class="layout-right" style="width: 50%; height: 80%; display: flex; justify-content: center; align-items: center;">
+      <div class="container-profile">
+        <div class="item-images-profile item-profile">
+          {% if customer.image.url %}
+            <img src="{{ customer.images.url }}" alt="This is profile pic" />
+          {% else %}
+            <img class="avatar-profile" src="{% static 'images/avatar_default.png' %}" alt="This is profile pic" />
+          {% endif %}
+        </div>
+        <div class="item-text1-profile item-text-profile">
+          <p>Tên đăng nhập : {{ customer.name_customer }}</p>
+        </div>
+        <div class="item-text2-profile item-text-profile">
+          <p>Email : {{ customer.email_customer }}</p>
+        </div>
+        <div class="item-text3-profile item-text-profile">
+          <p>
+            Địa chỉ :{% if customer.address %}
+              {{ customer.address }}
+            {% else %}
+              <span class="text-muted">Không có thông tin</span>
+            {% endif %}
+          </p>
+        </div>
+        <div class="item-text4-profile item-text-profile">
+          <p>
+            Số điện thoại :{% if customer.phone_number_customer %}
+              {{ customer.phone_number_customer }}
+            {% else %}
+              <span class="text-muted">Không có thông tin</span>
+            {% endif %}
+          </p>
+        </div>
+        <div class="item-text5-profile item-text-profile">
+          <p>Số lượng thú cưng : {{ pet_count }}</p>
+        </div>
+        <div class="item-text6-profile item-text-profile">
+          <button class="layout-right" id="editBtn">Cập nhật thông tin</button>
+        </div>
+      </div>
     </div>
   </div>
+  <script src="{% static 'js/updateInf.js' %}"></script>
 {% endblock %}
+
+{% comment %} <span class="close">&times;</span>
+<h2>Cập nhật thông tin</h2>
+<form id="updateForm">
+  <label for="address">Địa chỉ:</label>
+  <input type="text" id="address" name="address" required />
+
+  <label for="phone">Số điện thoại :</label>
+  <input type="text" id="phone" name="phone" required />
+
+  <button type="submit">Lưu thay đổi</button>
+</form>
+{% endcomment %}
