--- a/Website/app/templates/customer/index.html
+++ b/Website/app/templates/customer/index.html
@@ -47,6 +47,12 @@
       {% block rating %}
 
       {% endblock %}
+      {% block pet_registration %}
+
+      {% endblock %}
+      {% block pet_registration_image %}
+
+      {% endblock %}
     </body>
 
     <footer>&copy; 2025 Trung tâm chăm sóc thú y. Mọi quyền được bảo lưu.</footer>
