--- a/Website/app/templates/customer/home_customer.html
+++ b/Website/app/templates/customer/home_customer.html
@@ -30,60 +30,53 @@
         <p class="layout-text">Đánh giá</p>
       </div>
     </div>
-    <div>
-      <div style="width: 100%;height: 15%; display: grid; place-content: center; ">
-        <p class="layout-right" style="font-size: 24px; margin-top: 20px; ">Danh sách thú cưng</p>
+    <div style="width: 100%;">
+      <div style="width: 100% ;height: 10%; ">
+        <p class="layout-right" style="font-size: 24px;  width: fit-content; place-self: center;">Danh sách thú cưng</p>
       </div>
-      <div class="layout-right" style="width: 80%; height: 85%; margin-left: 75px;">
-        {% if pets %}
-          <table class="pet-table" style="margin-top: 10px;">
-            <thead>
-              <tr>
-                <th>Ảnh</th>
-                <th>Tên</th>
-                <th>Loài</th>
-                <th>Tuổi</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for pet in pets %}
-                <tr>
-                  <td>
-                    <img class="pet-img"
-                      src="{% if pet.images %}
-                        {{ pet.images.url }}
-                      {% else %}
-                        {% static 'images/default_pet.jpg' %}
-                      {% endif %}" />
-                  </td>
-                  <td>
-                    {% if pet.name_pet %}
-                      {{ pet.name_pet }}
-                    {% else %}
-                      Hong có thông tin
-                    {% endif %}
-                  </td>
-                  <td>
-                    {% if pet.species %}
-                      {{ pet.species }}
-                    {% else %}
-                      Hong có thông tin
-                    {% endif %}
-                  </td>
-                  <td>
-                    {% if pet.age %}
-                      {{ pet.age }}
-                    {% else %}
-                      Hong có thông tin
-                    {% endif %}
-                  </td>
-                </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        {% else %}
-          <p style="text-align: center; font-size: 25px; font-style: italic; margin-top: 100px;;">Bạn hong có thú cưng nào hết</p>
-        {% endif %}
+      <div class="layout-right" style="width: 90%; height: 85%; margin-left: 50px;">
+        <div id="title-showpet-home-customer">
+          <p>Ảnh</p>
+          <p>Tên</p>
+          <p>Chủng loại</p>
+          <p>Tuổi</p>
+        </div>
+        <div id="content-showpet-home-customer">
+          <div id="item-content-showpet-home-customer">
+            {% for pet in pets %}
+              <img class="pet-img"
+                src="{% if pet.images %}
+                  {{ pet.images.url }}
+                {% else %}
+                  {% static 'images/default_pet.jpg' %}
+                {% endif %}" />
+
+              <div>
+                {% if pet.name_pet %}
+                  {{ pet.name_pet }}
+                {% else %}
+                  Hong có thông tin
+                {% endif %}
+              </div>
+
+              <div>
+                {% if pet.species %}
+                  {{ pet.species }}
+                {% else %}
+                  Hong có thông tin
+                {% endif %}
+              </div>
+
+              <div>
+                {% if pet.age %}
+                  {{ pet.age }}
+                {% else %}
+                  Hong có thông tin
+                {% endif %}
+              </div>
+            {% endfor %}
+          </div>
+        </div>
       </div>
     </div>
   </div>
